[project]
name = "test-flows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jake@prefect.io", email = "jake@prefect.io" }
]
requires-python = ">=3.11"
dependencies = [
    "prefect>=3.1.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#[tool.hatch.build]
#packages = ["src"]
